--- a/public/app/components/footer/footer.html
+++ b/public/app/components/footer/footer.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
-          <h5><a class="lightgrey" href="">GitHub Repo</a></h5>
+          <h5><a class="lightgrey" href="https://github.com/skylocke/gube-roldberg">GitHub Repo</a></h5>
         </div>
       </div>
     </div>
